--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="initial-screen">
 
       <div id="header">
-        <span><a href="home.html">HOME</a></span>
+        <span><a href="index.html">HOME</a></span>
         <span><a href="events.html">EVENTS</a></span>
         <span><a href="team.html">TEAM</a></span>
       </div>
