--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-6 position-static p-4 pl-md-0">
           <h5 class="mt-0">Coming Soon...</h5>
-          <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+          <p>UofT pre pharmacy club social. Meet like minded indiviuals, bring your friends. Free food and drinks!</p>
           <span><a href="#" class="stretched-link">RSVP HERE</a></span>
           <span>DATE</span>
           <SPAN>LOCATION</SPAN>
