--- a/team.html
+++ b/team.html
@@ -105,12 +105,12 @@
 
 
 
-          <div class='col-xs-12 col-sm-4 col-xl-2'>
+          <div class='col-xs-12 col-sm-4 col-xl-2' id="minoo">
             <div class='container-fluid'>
               <div id='member-photo' class='row'>
                 <div id='member-info'>
                   <center><div class="border" id='photo-container'>
-                    <img id='member-image' class="img-fluid" alt="Responsive image" src="minoo.jpg">  
+                    <img id='member-image' class="img-fluid minoo" alt="Responsive image" src="minoo.jpg">  
                   </div></center>    
                 </div>
               </div>
