--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
               <div class="card-body">
                 <h5 class="card-title">Sofia Recio</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Treasurer</h6>
-                <p class="card-text">My name’s Sofia, I’m a second year undergrad in Life Sciences, and am majoring in Physiology with a double minor in Economics and Math. In addition to being Treasurer of (idk what the club is called), I’m also the Assistant Peer Mentor for the UC Life Sciences First-Year Learning Community. When I’m not in the library, I enjoy exploring the city and eating ice cream.</p>
+                <p class="card-text">My name’s Sofia, I’m a second year undergrad in Life Sciences, and am majoring in Physiology with a double minor in Economics and Math. In addition to being the Treasurer of UofT Pre-Pharmacy club, I’m also the Assistant Peer Mentor for the UC Life Sciences First-Year Learning Community. When I’m not in the library, I enjoy exploring the city and eating ice cream.</p>
               </div>
             </div>
           </div>
