added google analytics code and cleaned up the repo

--- a/events.html
+++ b/events.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143369592-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-143369592-1');
+    </script>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +35,7 @@
 
      <div id='event' class="row no-gutters bg-light position-relative">
         <div class="col-md-6 mb-md-0 p-md-4">
-          <img src="event.jpg" class="w-100 img-fluid" alt="Responsive image">
+          <img src="image/event.jpg" class="w-100 img-fluid" alt="Responsive image">
         </div>
         <div class="col-md-6 position-static p-4 pl-md-0">
           <h5 class="mt-0">Coming Soon...</h5>
@@ -46,13 +57,13 @@
             <center><div><a href="team.html">2019 Executive Team</a></div></center>
             <center><div><a target="_blank" href="https://pharmacy.utoronto.ca/">Leslie Dan Faculty of Pharmacy</a></div></center>
             <center><div><a target="_blank" href="https://www.pcatweb.info/">Pharmacy College Admission Test</a></div></center>
-            <center><div><img src="pcat.jpg"></div></center>
+            <center><div><img src="image/pcat.jpg"></div></center>
 
 
           </div>
 
           <div id='logo' class='col-xs-12 col-md-4'>
-            <center><img src="logo.png"></center>
+            <center><img src="image/logo.png"></center>
           </div>
 
           <div class='col-xs-12 col-md-4'>
