--- a/team.html
+++ b/team.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143369592-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-143369592-1');
+    </script>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +45,7 @@
               <div id='member-photo' class='row'>
                 <div id='member-info'>
                   <center><div  class="border" id='photo-container'>
-                    <img id='member-image' class="img-fluid" alt="Responsive image" src="yousif.jpg">
+                    <img id='member-image' class="img-fluid" alt="Responsive image" src="image/yousif.jpg">
                   </div></center>
                   
                 </div>
@@ -60,7 +71,7 @@
               <div id='member-photo' class='row'>
                 <div id='member-info'>
                   <center><div class="border" id='photo-container'>
-                    <img id='member-image' class="img-fluid" alt="Responsive image" src="arman.jpeg">  
+                    <img id='member-image' class="img-fluid" alt="Responsive image" src="image/arman.jpeg">  
                   </div></center>    
                 </div>
               </div>
@@ -85,7 +96,7 @@
               <div id='member-photo' class='row'>
                 <div id='member-info'>
                   <center><div  class="border" id='photo-container'>
-                    <img id='member-image' class="img-fluid" alt="Responsive image" src="sofia.jpg">
+                    <img id='member-image' class="img-fluid" alt="Responsive image" src="image/sofia.jpg">
                   </div></center>
                   
                 </div>
@@ -111,7 +122,7 @@
               <div id='member-photo' class='row'>
                 <div id='member-info'>
                   <center><div class="border" id='photo-container'>
-                    <img id='member-image' class="img-fluid minoo" alt="Responsive image" src="minoo.jpg">  
+                    <img id='member-image' class="img-fluid minoo" alt="Responsive image" src="image/minoo.jpg">  
                   </div></center>    
                 </div>
               </div>
@@ -144,7 +155,7 @@
               <div id='member-photo' class='row'>
                 <div class='solo' id='member-info'>
                   <center><div  class="border" id='photo-container'>
-                    <img id='member-image' class="img-fluid" alt="Responsive image" src="arman.jpeg">
+                    <img id='member-image' class="img-fluid" alt="Responsive image" src="image/arman.jpeg">
                   </div></center>
                 </div>
               </div>
@@ -183,13 +194,13 @@
             <center><div><a href="team.html">2019 Executive Team</a></div></center>
             <center><div><a target="_blank" href="https://pharmacy.utoronto.ca/">Leslie Dan Faculty of Pharmacy</a></div></center>
             <center><div><a target="_blank" href="https://www.pcatweb.info/">Pharmacy College Admission Test</a></div></center>
-            <center><div><img src="pcat.jpg"></div></center>
+            <center><div><img src="image/pcat.jpg"></div></center>
 
 
           </div>
 
           <div id='logo' class='col-xs-12 col-md-4'>
-            <center><img src="logo.png"></center>
+            <center><img src="image/logo.png"></center>
           </div>
 
           <div class='col-xs-12 col-md-4'>
