added tiago pic

--- a/team.html
+++ b/team.html
@@ -155,7 +155,7 @@
               <div id='member-photo' class='row'>
                 <div class='solo' id='member-info'>
                   <center><div  class="border" id='photo-container'>
-                    <img id='member-image' class="img-fluid" alt="Responsive image" src="assets/image/arman.jpeg">
+                    <img id='member-image' class="img-fluid" alt="Responsive image" src="assets/image/tiago.jpg">
                   </div></center>
                 </div>
               </div>
